# beluga

./: Cargo.toml  README.md
beluga-app/: Cargo.toml
beluga-app/src/: app.rs  layout.rs  lib.rs  message.rs  window_menus.rs
beluga-core/: Cargo.toml
